--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>{app_title}</title>
         <script>
             if ("serviceWorker" in navigator) {
-                navigator.serviceWorker.register("/{base_path}/assets/sw.js");
+                navigator.serviceWorker.register("/assets/sw.js");
             }
         </script>
         <link rel="manifest" href="/assets/manifest.json" />
