--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html data-theme="fantasy">
     <head>
-        <title>{app_title}</title>
+        <title>Unscrow</title>
         <script>
             if ("serviceWorker" in navigator) {
                 navigator.serviceWorker.register("/assets/sw.js");
